Thu Jul 12 17:26:05 2007  Tim Janik  <timj@imendio.com>

	* tests/slice-concurrent.c: added GSLice test from Stefan Westerfeld,
	bug #433314.

Thu Jul 12 15:46:40 2007  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: migrate per-thread magazine caches from single-thread
	scenario to first thread using GSlice after g_thread_init(); based on
	a patch by Tor Lillqvist, fixes #331853.
	removed warning about g_thread_init() being called after other glib
	functions (in particular g_slice* calls), because GSlice can cope
	with this now and the rest of glib is believed to cope as well.

	* tests/slice-threadinit.c: new test program which tests GSlice working
	across g_thread_init() calls.

2007-07-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/pltcheck.sh: Add g_once_init_enter to the whitelist of
	symbols allowed to have a local PLT entry, to fix 'make check'.

Tue Jul 10 12:24:35 2007  Tim Janik  <timj@imendio.com>

	* glib/gthread.[hc]: implemented g_once_init_enter(),
	g_once_init_enter_impl() and g_once_init_leave(), based on a patch by
	Antoine Tremblay, fixes #65041.
	adapted exported inline function mechanism from gutils.[hc] for inlining
	g_once_init_enter_impl() in gthread.[hc].

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-07-09  Loïc Minier  <lool@dooz.org>

	* tests/refcount/closures.c: (main): Output newlines after thousand
	iterations of the inner-loop of the closures test; this helps having
	smaller lines and continuously outputting new lines.  (#447048).

2007-07-09  Ryan Lortie  <desrt@desrt.ca>

	* glib/gfileutils.c (write_to_temp_file): save errno to prevent it
	being clobbered by call to g_filename_display_name().  Bug #453796.

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-gettext.m4: Fix a small problem with
	msgfmt -c detection.  (#341988, Laszlo Peter)

2007-07-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (g_markup_parse_context_end_parse): Handle
	all states.  (#454473)
